[package]
name = "polars-helpers"
description = "A collection of helper functions for the Polars data manipulation library"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
itertools = "0.12.1"
polars = { version = "0.36.2", features = ["concat_str", "csv", "lazy", "lazy_regex", "round_series", "fmt", "dtype-date", "strings", "rolling_window", "rows", "serde", "is_in"], default-features = false }
reqwest = { version = "0.11.23", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
